@@ -80,7 +80,22 @@ class ApiQueryCategories extends ApiQueryGeneratorBase {
 
 		$this->addTables('categorylinks');
 		$this->addWhereFld('cl_from', array_keys($this->getPageSet()->getGoodTitles()));
-		$this->addOption('ORDER BY', "cl_from, cl_to");
+		if(!is_null($params['continue'])) {
+			$cont = explode('|', $params['continue']);
+			if(count($cont) != 2)
+				$this->dieUsage("Invalid continue param. You should pass the " .
+					"original value returned by the previous query", "_badcontinue");
+			$clfrom = intval($cont[0]);
+			$clto = $this->getDb()->strencode($cont[1]);
+			$this->addWhere("cl_from > $clfrom OR ".
+					"(cl_from = $clfrom AND ".
+					"cl_to >= '$clto')");
+		}
+		# Don't order by cl_from if it's constant in the WHERE clause
+		if(count($this->getPageSet()->getGoodTitles()) == 1)
+			$this->addOption('ORDER BY', 'cl_to');
+		else
+			$this->addOption('ORDER BY', "cl_from, cl_to");
 
 		$db = $this->getDB();
 		$res = $this->select(__METHOD__);
@@ -89,7 +104,14 @@ class ApiQueryCategories extends ApiQueryGeneratorBase {
 
 			$data = array();
 			$lastId = 0;	// database has no ID 0
+			$count = 0;
 			while ($row = $db->fetchObject($res)) {
+				if (++$count > $params['limit']) {
+					// We've reached the one extra which shows that
+					// there are additional pages to be had. Stop here...
+					$this->setContinueEnumParameter('continue', "{$row->cl_from}|{$row->cl_to}");
+					break;
+				}
 				if ($lastId != $row->cl_from) {
 					if($lastId != 0) {
 						$this->addPageSubItems($lastId, $data);
@@ -118,6 +140,13 @@ class ApiQueryCategories extends ApiQueryGeneratorBase {
 
 			$titles = array();
 			while ($row = $db->fetchObject($res)) {
+				if (++$count > $params['limit']) {
+					// We've reached the one extra which shows that
+					// there are additional pages to be had. Stop here...
+					$this->setContinueEnumParameter('continue', "{$row->il_from}|{$row->il_to}");
+					break;
+				}
+
 				$titles[] = Title :: makeTitle(NS_CATEGORY, $row->cl_to);
 			}
 			$resultPageSet->populateFromTitles($titles);
@@ -134,13 +163,23 @@ class ApiQueryCategories extends ApiQueryGeneratorBase {
 					'sortkey',
 					'timestamp',
 				)
-			)
+			),
+			'limit' => array(
+				ApiBase :: PARAM_DFLT => 10,
+				ApiBase :: PARAM_TYPE => 'limit',
+				ApiBase :: PARAM_MIN => 1,
+				ApiBase :: PARAM_MAX => ApiBase :: LIMIT_BIG1,
+				ApiBase :: PARAM_MAX2 => ApiBase :: LIMIT_BIG2
+			),
+			'continue' => null,
 		);
 	}
 
 	public function getParamDescription() {
 		return array (
 			'prop' => 'Which additional properties to get for each category.',
+			'limit' => 'How many langlinks to return',
+			'continue' => 'When more results are available, use this to continue',
 		);
 	}
 
