@@ -84,7 +84,22 @@ class ApiQueryLinks extends ApiQueryGeneratorBase {
 		$this->addTables($this->table);
 		$this->addWhereFld($this->prefix . '_from', array_keys($this->getPageSet()->getGoodTitles()));
 		$this->addWhereFld($this->prefix . '_namespace', $params['namespace']);
-		
+
+		if(!is_null($params['continue'])) {
+			$cont = explode('|', $params['continue']);
+			if(count($cont) != 3)
+				$this->dieUsage("Invalid continue param. You should pass the " .
+					"original value returned by the previous query", "_badcontinue");
+			$plfrom = intval($cont[0]);
+			$plns = intval($cont[1]);
+			$pltitle = $this->getDb()->strencode($cont[2]);
+			$this->addWhere("{$this->prefix}_from > $plfrom OR ".
+					"({$this->prefix}_from = $plfrom AND ".
+					"({$this->prefix}_namespace > $plns OR ".
+					"({$this->prefix}_namespace = $plns AND ".
+					"{$this->prefix}_title >= '$pltitle')))");
+		}
+
 		# Here's some MySQL craziness going on: if you use WHERE foo='bar'
 		# and later ORDER BY foo MySQL doesn't notice the ORDER BY is pointless
 		# but instead goes and filesorts, because the index for foo was used
@@ -93,11 +108,12 @@ class ApiQueryLinks extends ApiQueryGeneratorBase {
 		$order = array();
 		if(count($this->getPageSet()->getGoodTitles()) != 1)
 			$order[] = "{$this->prefix}_from";
-		if(!isset($params['namespace']))
+		if(count($params['namespace']) != 1)
 			$order[] = "{$this->prefix}_namespace";
 		$order[] = "{$this->prefix}_title";
 		$this->addOption('ORDER BY', implode(", ", $order));
 		$this->addOption('USE INDEX', "{$this->prefix}_from");
+		$this->addOption('LIMIT', $params['limit'] + 1);
 
 		$db = $this->getDB();
 		$res = $this->select(__METHOD__);
@@ -106,7 +122,15 @@ class ApiQueryLinks extends ApiQueryGeneratorBase {
 
 			$data = array();
 			$lastId = 0;	// database has no ID 0
+			$count = 0;
 			while ($row = $db->fetchObject($res)) {
+				if(++$count > $params['limit']) {
+					// We've reached the one extra which shows that
+					// there are additional pages to be had. Stop here...
+					$this->setContinueEnumParameter('continue',
+						"{$row->pl_from}|{$row->pl_namespace}|{$row->pl_title}");
+					break;
+				}
 				if ($lastId != $row->pl_from) {
 					if($lastId != 0) {
 						$this->addPageSubItems($lastId, $data);
@@ -127,7 +151,15 @@ class ApiQueryLinks extends ApiQueryGeneratorBase {
 		} else {
 
 			$titles = array();
+			$count = 0;
 			while ($row = $db->fetchObject($res)) {
+				if(++$count > $params['limit']) {
+					// We've reached the one extra which shows that
+					// there are additional pages to be had. Stop here...
+					$this->setContinueEnumParameter('continue',
+						"{$row->pl_from}|{$row->pl_namespace}|{$row->pl_title}");
+					break;
+				}
 				$titles[] = Title :: makeTitle($row->pl_namespace, $row->pl_title);
 			}
 			$resultPageSet->populateFromTitles($titles);
@@ -142,15 +174,25 @@ class ApiQueryLinks extends ApiQueryGeneratorBase {
 				'namespace' => array(
 					ApiBase :: PARAM_TYPE => 'namespace',
 					ApiBase :: PARAM_ISMULTI => true
-				)
+				),
+				'limit' => array(
+					ApiBase :: PARAM_DFLT => 10,
+					ApiBase :: PARAM_TYPE => 'limit',
+					ApiBase :: PARAM_MIN => 1,
+					ApiBase :: PARAM_MAX => ApiBase :: LIMIT_BIG1,
+					ApiBase :: PARAM_MAX2 => ApiBase :: LIMIT_BIG2
+				),
+				'continue' => null,
 			);
 	}
 
 	public function getParamDescription()
 	{
 		return array(
-				'namespace' => "Show {$this->description}s in this namespace(s) only"
-			);
+				'namespace' => "Show {$this->description}s in this namespace(s) only",
+				'limit' => 'How many links to return',
+				'continue' => 'When more results are available, use this to continue',
+		);
 	}
 
 	public function getDescription() {
